Fix bug where spacing of preview window elements wasn't correct in Safari

--- a/src/components/common/PreviewOverlay/previewoverlay.module.scss
+++ b/src/components/common/PreviewOverlay/previewoverlay.module.scss
@@ -23,10 +23,11 @@
       // background-color: #5c5c5c;
       border: 1px solid $dark-blue;
       border-radius: 4px;
-      padding: 20px;
+      padding: 20px 20px 30px 20px;
       position: relative;
       margin: auto;
-      display: flex;
+      display: grid;
+      grid-template-rows: auto 1fr;
       flex-flow: column;
       align-items: center;
       width: 90%;
@@ -48,6 +49,7 @@
       .currentFileWindow {
         width: 100%;
         height: 100%;
+        margin-top: 20px;
         iframe {
           width: 100%;
           height: 100%;
